--- a/package.json
+++ b/package.json
@@ -35,28 +35,23 @@
     "node": ">=8"
   },
   "scripts": {
-    "build:jsfm": "node build/build.js jsfm",
-    "build:env": "WEEX_FREEZE=true node build/build.js env",
-    "build:polyfill": "node build/build.js polyfill",
-    "build:vue": "node build/build.js vue",
-    "build:rax": "node build/build.js rax",
-    "build:runtime": "node build/build.js runtime",
-    "build:test": "webpack --config build/webpack.test.config.js",
+    "build:jsfm": "node scripts/build.js jsfm",
+    "build:env": "WEEX_FREEZE=true node scripts/build.js env",
+    "build:polyfill": "node scripts/build.js polyfill",
+    "build:vue": "node scripts/build.js vue",
+    "build:rax": "node scripts/build.js rax",
+    "build:runtime": "node scripts/build.js runtime",
     "build": "npm run build:env && npm run build:jsfm && npm run build:vue && npm run build:rax",
-    "dev:jsfm": "node build/build.js jsfm --watch",
-    "dev:runtime": "node build/build.js runtime --watch",
-    "dev:test": "webpack --watch --config build/webpack.test.config.js",
+    "dev:jsfm": "node scripts/build.js jsfm --watch",
+    "dev:runtime": "node scripts/build.js runtime --watch",
     "lint": "eslint runtime",
     "test:case": "mocha --require reify test/js-framework/case/tester.js",
     "test:unit": "mocha --require reify test/js-framework/unit/**/*",
     "test": "npm run lint && npm run test:unit && npm run test:case",
-    "test:cover-html": "babel-istanbul cover --report html node_modules/mocha/bin/_mocha -- --require reify --reporter dot html5/test/unit/ && open coverage/index.html",
-    "test:cover": "babel-istanbul cover --report text node_modules/mocha/bin/_mocha -- --require reify --reporter dot html5/test/unit/",
     "serve": "serve ./ -p 12580",
     "serve:no-port": "serve ./",
-    "clean:test": "echo \"\\033[36;1m[Clean]\\033[0m \\033[33mtest\\033[0m\" && rm -vrf test/build/*",
-    "clean": "npm run clean:test",
-    "copy:js": "cp -vf ./packages/weex-js-framework/index.js ./pre-build/native-bundle-main.js",
+    "clean": "rm -vrf test/build/*",
+    "copy:js": "cp -vf ./dist/weex-js-framework.min.js ./pre-build/weex-main-jsfm.js",
     "copy": "npm run copy:js"
   },
   "dependencies": {
@@ -76,14 +71,12 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-runtime": "^6.11.6",
     "chai": "^3.5.0",
-    "chromedriver": "^2.21.2",
     "cross-spawn": "^4.0.0",
     "css-loader": "^0.26.1",
     "danger": "^9.0.0",
     "dateformat": "^2.0.0",
     "eslint": "^4.18.2",
     "eslint-plugin-flowtype": "^2.40.1",
-    "fs-extra": "^2.0.0",
     "github": "^9.2.0",
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
@@ -91,7 +84,6 @@
     "mocha": "^2.5.3",
     "mocha-simple-html-reporter": "^1.0.1",
     "parse-diff": "^0.4.0",
-    "phantomjs-prebuilt": "^2.1.7",
     "reify": "^0.3.8",
     "rollup": "^0.53.2",
     "rollup-plugin-buble": "^0.18.0",
@@ -101,9 +93,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1",
-    "selenium-server": "2.53.1",
     "serve": "^7.1.3",
-    "shelljs": "^0.7.8",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "uglify-es": "^3.3.4",
@@ -112,8 +102,6 @@
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "2.4.3",
     "webpack": "^1.13.1",
-    "weex-components": "^0.2.0",
-    "weex-gcanvas": "^0.4.2",
     "weex-loader": "^0.5.3",
     "weex-vdom-tester": "^0.2.0",
     "weex-vue-render": "^1.0.24",
